update fix gaps

--- a/css/default.scss
+++ b/css/default.scss
@@ -117,7 +117,7 @@ p#intro {
   .kit {
 
     position: relative;
-    margin-top: 10rem;
+    margin-top: 1rem;
 
 
     .image, .details {
@@ -125,7 +125,7 @@ p#intro {
     }
 
     // To account for the image.
-    min-height: 600px;
+    min-height: 900px;
 
     margin-left: auto;
     margin-right: auto;
